parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    CLEFT_BRACKET
    COPROC
    CRIGHT_BRACKET
    ELIF
    ESAC
    EXCLAMATION_MARK
    FUNCTION
    LEFT_BRACE
    RIGHT_BRACE
    SELECT
    SPACE
    TIME
    UNTIL

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     assignment -> ID EQUALS expression
Rule 5     assignment -> ID EQUALS DOLLAR LPAREN arithmetic_expression RPAREN
Rule 6     expression -> NUMBER
Rule 7     expression -> STRING
Rule 8     expression -> MINUS expression
Rule 9     expression -> ID
Rule 10    expression -> LPAREN expression RPAREN
Rule 11    statement -> while_statement
Rule 12    statement -> if_statement
Rule 13    statement -> for_statement
Rule 14    statement -> command
Rule 15    statement -> assignment
Rule 16    statement -> comment
Rule 17    statement -> arithmetic_expression
Rule 18    statement -> insertion
Rule 19    statement -> pipe_command
Rule 20    command -> ID
Rule 21    command -> command ID
Rule 22    command -> command NUMBER
Rule 23    command -> command STRING
Rule 24    command -> command MINUS ID
Rule 25    command -> command MINUS MINUS ID
Rule 26    comment -> HASHTAG ID
Rule 27    insertion -> command ID INSERTION ID
Rule 28    insertion -> command STRING INSERTION ID
Rule 29    pipe_command -> command PIPE command
Rule 30    while_statement -> WHILE condition DO statements DONE
Rule 31    condition -> LEFT_BRACKET expression RIGHT_BRACKET
Rule 32    arithmetic_expression -> NUMBER
Rule 33    arithmetic_expression -> DOLLAR ID
Rule 34    arithmetic_expression -> LPAREN arithmetic_expression RPAREN
Rule 35    arithmetic_expression -> arithmetic_expression PLUS arithmetic_expression
Rule 36    arithmetic_expression -> arithmetic_expression MINUS arithmetic_expression
Rule 37    arithmetic_expression -> arithmetic_expression TIMES arithmetic_expression
Rule 38    arithmetic_expression -> arithmetic_expression DIVIDE arithmetic_expression
Rule 39    for_statement -> FOR ID IN command DO statements DONE
Rule 40    if_statement -> IF condition THEN statements ELSE statements FI

Terminals, with rules where they appear

CASE                 : 
CLEFT_BRACKET        : 
COPROC               : 
CRIGHT_BRACKET       : 
DIVIDE               : 38
DO                   : 30 39
DOLLAR               : 5 33
DONE                 : 30 39
ELIF                 : 
ELSE                 : 40
EQUALS               : 4 5
ESAC                 : 
EXCLAMATION_MARK     : 
FI                   : 40
FOR                  : 39
FUNCTION             : 
HASHTAG              : 26
ID                   : 4 5 9 20 21 24 25 26 27 27 28 33 39
IF                   : 40
IN                   : 39
INSERTION            : 27 28
LEFT_BRACE           : 
LEFT_BRACKET         : 31
LPAREN               : 5 10 34
MINUS                : 8 24 25 25 36
NUMBER               : 6 22 32
PIPE                 : 29
PLUS                 : 35
RIGHT_BRACE          : 
RIGHT_BRACKET        : 31
RPAREN               : 5 10 34
SELECT               : 
SPACE                : 
STRING               : 7 23 28
THEN                 : 40
TIME                 : 
TIMES                : 37
UNTIL                : 
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

arithmetic_expression : 5 17 34 35 35 36 36 37 37 38 38
assignment           : 15
command              : 14 21 22 23 24 25 27 28 29 29 39
comment              : 16
condition            : 30 40
expression           : 4 8 10 31
for_statement        : 13
if_statement         : 12
insertion            : 18
pipe_command         : 19
program              : 0
statement            : 2 3
statements           : 1 3 30 39 40 40
while_statement      : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (11) statement -> . while_statement
    (12) statement -> . if_statement
    (13) statement -> . for_statement
    (14) statement -> . command
    (15) statement -> . assignment
    (16) statement -> . comment
    (17) statement -> . arithmetic_expression
    (18) statement -> . insertion
    (19) statement -> . pipe_command
    (30) while_statement -> . WHILE condition DO statements DONE
    (40) if_statement -> . IF condition THEN statements ELSE statements FI
    (39) for_statement -> . FOR ID IN command DO statements DONE
    (20) command -> . ID
    (21) command -> . command ID
    (22) command -> . command NUMBER
    (23) command -> . command STRING
    (24) command -> . command MINUS ID
    (25) command -> . command MINUS MINUS ID
    (4) assignment -> . ID EQUALS expression
    (5) assignment -> . ID EQUALS DOLLAR LPAREN arithmetic_expression RPAREN
    (26) comment -> . HASHTAG ID
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression
    (27) insertion -> . command ID INSERTION ID
    (28) insertion -> . command STRING INSERTION ID
    (29) pipe_command -> . command PIPE command

    WHILE           shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15
    ID              shift and go to state 16
    HASHTAG         shift and go to state 20
    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    while_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    for_statement                  shift and go to state 6
    command                        shift and go to state 7
    assignment                     shift and go to state 8
    comment                        shift and go to state 9
    arithmetic_expression          shift and go to state 10
    insertion                      shift and go to state 11
    pipe_command                   shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (11) statement -> . while_statement
    (12) statement -> . if_statement
    (13) statement -> . for_statement
    (14) statement -> . command
    (15) statement -> . assignment
    (16) statement -> . comment
    (17) statement -> . arithmetic_expression
    (18) statement -> . insertion
    (19) statement -> . pipe_command
    (30) while_statement -> . WHILE condition DO statements DONE
    (40) if_statement -> . IF condition THEN statements ELSE statements FI
    (39) for_statement -> . FOR ID IN command DO statements DONE
    (20) command -> . ID
    (21) command -> . command ID
    (22) command -> . command NUMBER
    (23) command -> . command STRING
    (24) command -> . command MINUS ID
    (25) command -> . command MINUS MINUS ID
    (4) assignment -> . ID EQUALS expression
    (5) assignment -> . ID EQUALS DOLLAR LPAREN arithmetic_expression RPAREN
    (26) comment -> . HASHTAG ID
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression
    (27) insertion -> . command ID INSERTION ID
    (28) insertion -> . command STRING INSERTION ID
    (29) pipe_command -> . command PIPE command

    $end            reduce using rule 1 (program -> statements .)
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15
    ID              shift and go to state 16
    HASHTAG         shift and go to state 20
    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    statement                      shift and go to state 21
    while_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    for_statement                  shift and go to state 6
    command                        shift and go to state 7
    assignment                     shift and go to state 8
    comment                        shift and go to state 9
    arithmetic_expression          shift and go to state 10
    insertion                      shift and go to state 11
    pipe_command                   shift and go to state 12

state 3

    (2) statements -> statement .

    WHILE           reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    HASHTAG         reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    DOLLAR          reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    DONE            reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)
    FI              reduce using rule 2 (statements -> statement .)


state 4

    (11) statement -> while_statement .

    WHILE           reduce using rule 11 (statement -> while_statement .)
    IF              reduce using rule 11 (statement -> while_statement .)
    FOR             reduce using rule 11 (statement -> while_statement .)
    ID              reduce using rule 11 (statement -> while_statement .)
    HASHTAG         reduce using rule 11 (statement -> while_statement .)
    NUMBER          reduce using rule 11 (statement -> while_statement .)
    DOLLAR          reduce using rule 11 (statement -> while_statement .)
    LPAREN          reduce using rule 11 (statement -> while_statement .)
    $end            reduce using rule 11 (statement -> while_statement .)
    DONE            reduce using rule 11 (statement -> while_statement .)
    ELSE            reduce using rule 11 (statement -> while_statement .)
    FI              reduce using rule 11 (statement -> while_statement .)


state 5

    (12) statement -> if_statement .

    WHILE           reduce using rule 12 (statement -> if_statement .)
    IF              reduce using rule 12 (statement -> if_statement .)
    FOR             reduce using rule 12 (statement -> if_statement .)
    ID              reduce using rule 12 (statement -> if_statement .)
    HASHTAG         reduce using rule 12 (statement -> if_statement .)
    NUMBER          reduce using rule 12 (statement -> if_statement .)
    DOLLAR          reduce using rule 12 (statement -> if_statement .)
    LPAREN          reduce using rule 12 (statement -> if_statement .)
    $end            reduce using rule 12 (statement -> if_statement .)
    DONE            reduce using rule 12 (statement -> if_statement .)
    ELSE            reduce using rule 12 (statement -> if_statement .)
    FI              reduce using rule 12 (statement -> if_statement .)


state 6

    (13) statement -> for_statement .

    WHILE           reduce using rule 13 (statement -> for_statement .)
    IF              reduce using rule 13 (statement -> for_statement .)
    FOR             reduce using rule 13 (statement -> for_statement .)
    ID              reduce using rule 13 (statement -> for_statement .)
    HASHTAG         reduce using rule 13 (statement -> for_statement .)
    NUMBER          reduce using rule 13 (statement -> for_statement .)
    DOLLAR          reduce using rule 13 (statement -> for_statement .)
    LPAREN          reduce using rule 13 (statement -> for_statement .)
    $end            reduce using rule 13 (statement -> for_statement .)
    DONE            reduce using rule 13 (statement -> for_statement .)
    ELSE            reduce using rule 13 (statement -> for_statement .)
    FI              reduce using rule 13 (statement -> for_statement .)


state 7

    (14) statement -> command .
    (21) command -> command . ID
    (22) command -> command . NUMBER
    (23) command -> command . STRING
    (24) command -> command . MINUS ID
    (25) command -> command . MINUS MINUS ID
    (27) insertion -> command . ID INSERTION ID
    (28) insertion -> command . STRING INSERTION ID
    (29) pipe_command -> command . PIPE command

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    WHILE           reduce using rule 14 (statement -> command .)
    IF              reduce using rule 14 (statement -> command .)
    FOR             reduce using rule 14 (statement -> command .)
    HASHTAG         reduce using rule 14 (statement -> command .)
    DOLLAR          reduce using rule 14 (statement -> command .)
    LPAREN          reduce using rule 14 (statement -> command .)
    $end            reduce using rule 14 (statement -> command .)
    DONE            reduce using rule 14 (statement -> command .)
    ELSE            reduce using rule 14 (statement -> command .)
    FI              reduce using rule 14 (statement -> command .)
    ID              shift and go to state 22
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    MINUS           shift and go to state 25
    PIPE            shift and go to state 26

  ! ID              [ reduce using rule 14 (statement -> command .) ]
  ! NUMBER          [ reduce using rule 14 (statement -> command .) ]


state 8

    (15) statement -> assignment .

    WHILE           reduce using rule 15 (statement -> assignment .)
    IF              reduce using rule 15 (statement -> assignment .)
    FOR             reduce using rule 15 (statement -> assignment .)
    ID              reduce using rule 15 (statement -> assignment .)
    HASHTAG         reduce using rule 15 (statement -> assignment .)
    NUMBER          reduce using rule 15 (statement -> assignment .)
    DOLLAR          reduce using rule 15 (statement -> assignment .)
    LPAREN          reduce using rule 15 (statement -> assignment .)
    $end            reduce using rule 15 (statement -> assignment .)
    DONE            reduce using rule 15 (statement -> assignment .)
    ELSE            reduce using rule 15 (statement -> assignment .)
    FI              reduce using rule 15 (statement -> assignment .)


state 9

    (16) statement -> comment .

    WHILE           reduce using rule 16 (statement -> comment .)
    IF              reduce using rule 16 (statement -> comment .)
    FOR             reduce using rule 16 (statement -> comment .)
    ID              reduce using rule 16 (statement -> comment .)
    HASHTAG         reduce using rule 16 (statement -> comment .)
    NUMBER          reduce using rule 16 (statement -> comment .)
    DOLLAR          reduce using rule 16 (statement -> comment .)
    LPAREN          reduce using rule 16 (statement -> comment .)
    $end            reduce using rule 16 (statement -> comment .)
    DONE            reduce using rule 16 (statement -> comment .)
    ELSE            reduce using rule 16 (statement -> comment .)
    FI              reduce using rule 16 (statement -> comment .)


state 10

    (17) statement -> arithmetic_expression .
    (35) arithmetic_expression -> arithmetic_expression . PLUS arithmetic_expression
    (36) arithmetic_expression -> arithmetic_expression . MINUS arithmetic_expression
    (37) arithmetic_expression -> arithmetic_expression . TIMES arithmetic_expression
    (38) arithmetic_expression -> arithmetic_expression . DIVIDE arithmetic_expression

    WHILE           reduce using rule 17 (statement -> arithmetic_expression .)
    IF              reduce using rule 17 (statement -> arithmetic_expression .)
    FOR             reduce using rule 17 (statement -> arithmetic_expression .)
    ID              reduce using rule 17 (statement -> arithmetic_expression .)
    HASHTAG         reduce using rule 17 (statement -> arithmetic_expression .)
    NUMBER          reduce using rule 17 (statement -> arithmetic_expression .)
    DOLLAR          reduce using rule 17 (statement -> arithmetic_expression .)
    LPAREN          reduce using rule 17 (statement -> arithmetic_expression .)
    $end            reduce using rule 17 (statement -> arithmetic_expression .)
    DONE            reduce using rule 17 (statement -> arithmetic_expression .)
    ELSE            reduce using rule 17 (statement -> arithmetic_expression .)
    FI              reduce using rule 17 (statement -> arithmetic_expression .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30


state 11

    (18) statement -> insertion .

    WHILE           reduce using rule 18 (statement -> insertion .)
    IF              reduce using rule 18 (statement -> insertion .)
    FOR             reduce using rule 18 (statement -> insertion .)
    ID              reduce using rule 18 (statement -> insertion .)
    HASHTAG         reduce using rule 18 (statement -> insertion .)
    NUMBER          reduce using rule 18 (statement -> insertion .)
    DOLLAR          reduce using rule 18 (statement -> insertion .)
    LPAREN          reduce using rule 18 (statement -> insertion .)
    $end            reduce using rule 18 (statement -> insertion .)
    DONE            reduce using rule 18 (statement -> insertion .)
    ELSE            reduce using rule 18 (statement -> insertion .)
    FI              reduce using rule 18 (statement -> insertion .)


state 12

    (19) statement -> pipe_command .

    WHILE           reduce using rule 19 (statement -> pipe_command .)
    IF              reduce using rule 19 (statement -> pipe_command .)
    FOR             reduce using rule 19 (statement -> pipe_command .)
    ID              reduce using rule 19 (statement -> pipe_command .)
    HASHTAG         reduce using rule 19 (statement -> pipe_command .)
    NUMBER          reduce using rule 19 (statement -> pipe_command .)
    DOLLAR          reduce using rule 19 (statement -> pipe_command .)
    LPAREN          reduce using rule 19 (statement -> pipe_command .)
    $end            reduce using rule 19 (statement -> pipe_command .)
    DONE            reduce using rule 19 (statement -> pipe_command .)
    ELSE            reduce using rule 19 (statement -> pipe_command .)
    FI              reduce using rule 19 (statement -> pipe_command .)


state 13

    (30) while_statement -> WHILE . condition DO statements DONE
    (31) condition -> . LEFT_BRACKET expression RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 32

    condition                      shift and go to state 31

state 14

    (40) if_statement -> IF . condition THEN statements ELSE statements FI
    (31) condition -> . LEFT_BRACKET expression RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 32

    condition                      shift and go to state 33

state 15

    (39) for_statement -> FOR . ID IN command DO statements DONE

    ID              shift and go to state 34


state 16

    (20) command -> ID .
    (4) assignment -> ID . EQUALS expression
    (5) assignment -> ID . EQUALS DOLLAR LPAREN arithmetic_expression RPAREN

    ID              reduce using rule 20 (command -> ID .)
    NUMBER          reduce using rule 20 (command -> ID .)
    STRING          reduce using rule 20 (command -> ID .)
    MINUS           reduce using rule 20 (command -> ID .)
    PIPE            reduce using rule 20 (command -> ID .)
    WHILE           reduce using rule 20 (command -> ID .)
    IF              reduce using rule 20 (command -> ID .)
    FOR             reduce using rule 20 (command -> ID .)
    HASHTAG         reduce using rule 20 (command -> ID .)
    DOLLAR          reduce using rule 20 (command -> ID .)
    LPAREN          reduce using rule 20 (command -> ID .)
    $end            reduce using rule 20 (command -> ID .)
    DONE            reduce using rule 20 (command -> ID .)
    ELSE            reduce using rule 20 (command -> ID .)
    FI              reduce using rule 20 (command -> ID .)
    EQUALS          shift and go to state 35


state 17

    (32) arithmetic_expression -> NUMBER .

    PLUS            reduce using rule 32 (arithmetic_expression -> NUMBER .)
    MINUS           reduce using rule 32 (arithmetic_expression -> NUMBER .)
    TIMES           reduce using rule 32 (arithmetic_expression -> NUMBER .)
    DIVIDE          reduce using rule 32 (arithmetic_expression -> NUMBER .)
    WHILE           reduce using rule 32 (arithmetic_expression -> NUMBER .)
    IF              reduce using rule 32 (arithmetic_expression -> NUMBER .)
    FOR             reduce using rule 32 (arithmetic_expression -> NUMBER .)
    ID              reduce using rule 32 (arithmetic_expression -> NUMBER .)
    HASHTAG         reduce using rule 32 (arithmetic_expression -> NUMBER .)
    NUMBER          reduce using rule 32 (arithmetic_expression -> NUMBER .)
    DOLLAR          reduce using rule 32 (arithmetic_expression -> NUMBER .)
    LPAREN          reduce using rule 32 (arithmetic_expression -> NUMBER .)
    $end            reduce using rule 32 (arithmetic_expression -> NUMBER .)
    RPAREN          reduce using rule 32 (arithmetic_expression -> NUMBER .)
    DONE            reduce using rule 32 (arithmetic_expression -> NUMBER .)
    ELSE            reduce using rule 32 (arithmetic_expression -> NUMBER .)
    FI              reduce using rule 32 (arithmetic_expression -> NUMBER .)


state 18

    (33) arithmetic_expression -> DOLLAR . ID

    ID              shift and go to state 36


state 19

    (34) arithmetic_expression -> LPAREN . arithmetic_expression RPAREN
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression

    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    arithmetic_expression          shift and go to state 37

state 20

    (26) comment -> HASHTAG . ID

    ID              shift and go to state 38


state 21

    (3) statements -> statements statement .

    WHILE           reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    HASHTAG         reduce using rule 3 (statements -> statements statement .)
    NUMBER          reduce using rule 3 (statements -> statements statement .)
    DOLLAR          reduce using rule 3 (statements -> statements statement .)
    LPAREN          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    DONE            reduce using rule 3 (statements -> statements statement .)
    ELSE            reduce using rule 3 (statements -> statements statement .)
    FI              reduce using rule 3 (statements -> statements statement .)


state 22

    (21) command -> command ID .
    (27) insertion -> command ID . INSERTION ID

    ID              reduce using rule 21 (command -> command ID .)
    NUMBER          reduce using rule 21 (command -> command ID .)
    STRING          reduce using rule 21 (command -> command ID .)
    MINUS           reduce using rule 21 (command -> command ID .)
    PIPE            reduce using rule 21 (command -> command ID .)
    WHILE           reduce using rule 21 (command -> command ID .)
    IF              reduce using rule 21 (command -> command ID .)
    FOR             reduce using rule 21 (command -> command ID .)
    HASHTAG         reduce using rule 21 (command -> command ID .)
    DOLLAR          reduce using rule 21 (command -> command ID .)
    LPAREN          reduce using rule 21 (command -> command ID .)
    $end            reduce using rule 21 (command -> command ID .)
    DONE            reduce using rule 21 (command -> command ID .)
    ELSE            reduce using rule 21 (command -> command ID .)
    FI              reduce using rule 21 (command -> command ID .)
    INSERTION       shift and go to state 39


state 23

    (22) command -> command NUMBER .

    ID              reduce using rule 22 (command -> command NUMBER .)
    NUMBER          reduce using rule 22 (command -> command NUMBER .)
    STRING          reduce using rule 22 (command -> command NUMBER .)
    MINUS           reduce using rule 22 (command -> command NUMBER .)
    PIPE            reduce using rule 22 (command -> command NUMBER .)
    WHILE           reduce using rule 22 (command -> command NUMBER .)
    IF              reduce using rule 22 (command -> command NUMBER .)
    FOR             reduce using rule 22 (command -> command NUMBER .)
    HASHTAG         reduce using rule 22 (command -> command NUMBER .)
    DOLLAR          reduce using rule 22 (command -> command NUMBER .)
    LPAREN          reduce using rule 22 (command -> command NUMBER .)
    $end            reduce using rule 22 (command -> command NUMBER .)
    DONE            reduce using rule 22 (command -> command NUMBER .)
    ELSE            reduce using rule 22 (command -> command NUMBER .)
    FI              reduce using rule 22 (command -> command NUMBER .)
    DO              reduce using rule 22 (command -> command NUMBER .)


state 24

    (23) command -> command STRING .
    (28) insertion -> command STRING . INSERTION ID

    ID              reduce using rule 23 (command -> command STRING .)
    NUMBER          reduce using rule 23 (command -> command STRING .)
    STRING          reduce using rule 23 (command -> command STRING .)
    MINUS           reduce using rule 23 (command -> command STRING .)
    PIPE            reduce using rule 23 (command -> command STRING .)
    WHILE           reduce using rule 23 (command -> command STRING .)
    IF              reduce using rule 23 (command -> command STRING .)
    FOR             reduce using rule 23 (command -> command STRING .)
    HASHTAG         reduce using rule 23 (command -> command STRING .)
    DOLLAR          reduce using rule 23 (command -> command STRING .)
    LPAREN          reduce using rule 23 (command -> command STRING .)
    $end            reduce using rule 23 (command -> command STRING .)
    DONE            reduce using rule 23 (command -> command STRING .)
    ELSE            reduce using rule 23 (command -> command STRING .)
    FI              reduce using rule 23 (command -> command STRING .)
    INSERTION       shift and go to state 40


state 25

    (24) command -> command MINUS . ID
    (25) command -> command MINUS . MINUS ID

    ID              shift and go to state 42
    MINUS           shift and go to state 41


state 26

    (29) pipe_command -> command PIPE . command
    (20) command -> . ID
    (21) command -> . command ID
    (22) command -> . command NUMBER
    (23) command -> . command STRING
    (24) command -> . command MINUS ID
    (25) command -> . command MINUS MINUS ID

    ID              shift and go to state 44

    command                        shift and go to state 43

state 27

    (35) arithmetic_expression -> arithmetic_expression PLUS . arithmetic_expression
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression

    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    arithmetic_expression          shift and go to state 45

state 28

    (36) arithmetic_expression -> arithmetic_expression MINUS . arithmetic_expression
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression

    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    arithmetic_expression          shift and go to state 46

state 29

    (37) arithmetic_expression -> arithmetic_expression TIMES . arithmetic_expression
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression

    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    arithmetic_expression          shift and go to state 47

state 30

    (38) arithmetic_expression -> arithmetic_expression DIVIDE . arithmetic_expression
    (32) arithmetic_expression -> . NUMBER
    (33) arithmetic_expression -> . DOLLAR ID
    (34) arithmetic_expression -> . LPAREN arithmetic_expression RPAREN
    (35) arithmetic_expression -> . arithmetic_expression PLUS arithmetic_expression
    (36) arithmetic_expression -> . arithmetic_expression MINUS arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression TIMES arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression DIVIDE arithmetic_expression

    NUMBER          shift and go to state 17
    DOLLAR          shift and go to state 18
    LPAREN          shift and go to state 19

    arithmetic_expression          shift and go to state 48

state 31

    (30) while_statement -> WHILE condition . DO statements DONE

    DO              shift and go to state 49


state 32

    (31) condition -> LEFT_BRACKET . expression RIGHT_BRACKET
    (6) expression -> . NUMBER
    (7) expression -> . STRING
    (8) expression -> . MINUS expression
    (9) expression -> . ID
    (10) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 51
    STRING          shift and go to state 52
    MINUS           shift and go to state 53
    ID              shift and go to state 54
    LPAREN          shift and go to state 55

    expression                     shift and go to state 50

state 33

    (40) if_statement -> IF condition . THEN statements ELSE statements FI

    THEN            shift and go to state 56


state 34

    (39) for_statement -> FOR ID . IN command DO statements DONE

    IN              shift and go to state 57


state 35

    (4) assignment -> ID EQUALS . expression
    (5) assignment -> ID EQUALS . DOLLAR LPAREN arithmetic_expression RPAREN
    (6) expression -> . NUMBER
    (7) expression -> . STRING
    (8) expression -> . MINUS expression
    (9) expression -> . ID
    (10) expression -> . LPAREN expression RPAREN

    DOLLAR          shift and go to state 59
    NUMBER          shift and go to state 51
    STRING          shift and go to state 52
    MINUS           shift and go to state 53
    ID              shift and go to state 54
    LPAREN          shift and go to state 55

    expression                     shift and go to state 58

state 36

    (33) arithmetic_expression -> DOLLAR ID .

    PLUS            reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    MINUS           reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    TIMES           reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    DIVIDE          reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    WHILE           reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    IF              reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    FOR             reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    ID              reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    HASHTAG         reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    NUMBER          reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    DOLLAR          reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    LPAREN          reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    $end            reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    RPAREN          reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    DONE            reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    ELSE            reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)
    FI              reduce using rule 33 (arithmetic_expression -> DOLLAR ID .)


state 37

    (34) arithmetic_expression -> LPAREN arithmetic_expression . RPAREN
    (35) arithmetic_expression -> arithmetic_expression . PLUS arithmetic_expression
    (36) arithmetic_expression -> arithmetic_expression . MINUS arithmetic_expression
    (37) arithmetic_expression -> arithmetic_expression . TIMES arithmetic_expression
    (38) arithmetic_expression -> arithmetic_expression . DIVIDE arithmetic_expression

    RPAREN          shift and go to state 60
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30


state 38

    (26) comment -> HASHTAG ID .

    WHILE           reduce using rule 26 (comment -> HASHTAG ID .)
    IF              reduce using rule 26 (comment -> HASHTAG ID .)
    FOR             reduce using rule 26 (comment -> HASHTAG ID .)
    ID              reduce using rule 26 (comment -> HASHTAG ID .)
    HASHTAG         reduce using rule 26 (comment -> HASHTAG ID .)
    NUMBER          reduce using rule 26 (comment -> HASHTAG ID .)
    DOLLAR          reduce using rule 26 (comment -> HASHTAG ID .)
    LPAREN          reduce using rule 26 (comment -> HASHTAG ID .)
    $end            reduce using rule 26 (comment -> HASHTAG ID .)
    DONE            reduce using rule 26 (comment -> HASHTAG ID .)
    ELSE            reduce using rule 26 (comment -> HASHTAG ID .)
    FI              reduce using rule 26 (comment -> HASHTAG ID .)


state 39

    (27) insertion -> command ID INSERTION . ID

    ID              shift and go to state 61


state 40

    (28) insertion -> command STRING INSERTION . ID

    ID              shift and go to state 62


state 41

    (25) command -> command MINUS MINUS . ID

    ID              shift and go to state 63


state 42

    (24) command -> command MINUS ID .
